# cppTest

./: README.txt  icmp-test.cpp
automake/: Makefile  Makefile.am  Makefile.in  README.txt  config.status  configure  configure.ac  configure.in  configure.scan  depcomp  install-sh  missing
automake/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
automake/src/: hello.cpp
automake_cxx/: Makefile  config.status  configure.ac
automake_cxx/src/: Makefile  hello
cmake/: CMakeList.txt  main.cpp
daily/cpp_prj/: Makefile  config.status
daily/cpp_prj_boost/: Makefile  config.status  configure
gdb/hello_cpp/: Makefile  config.status
project/: README.md
project/cpp_prj_boost/: Makefile  Makefile.in  autogen.sh  cpp_prj_boost.sln  cpp_prj_boost.vcxproj  cpp_prj_boost.vcxproj.filters  ltmain.sh
project/cpp_prj_cpp_modern/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  cpp_prj_cpp_modern.sln  cpp_prj_cpp_modern.vcxproj  cpp_prj_cpp_modern.vcxproj.filters  git-push.sh
qt_project/build-hello-Desktop_Qt_5_13_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
qt_project/build-hello-Desktop_Qt_5_9_3_MinGW_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
qt_project/hello/: hello.pro  main.cpp  mainwindow.ui  test.h
qt_project/vcQt/: README.txt
vs_project/BinaryTree/: BinaryTree.h  main.cpp
vs_project/Console0427/: Console0427.cpp  Console0427.sln  Console0427.vcxproj  (+2 more)
xmldemo/: Makefile  Makefile.in  README.txt  config.status  configure  configure.ac
xmldemo/autom4te.cache/: output.0  traces.0  traces.1
xmldemo/src/: Makefile  Makefile.am  Makefile.in  hello.cpp  xmldemo.cpp
xmldemo/src/.deps/: hello.Po  xmldemo.Po
(+102 files in other folders)
